mongoose/mongoose.h

#define MG_VERSION "7.11"
#define MG_ARCH_CUSTOM 0       // User creates its own mongoose_custom.h
#define MG_ARCH_UNIX 1         // Linux, BSD, Mac, ...
#define MG_ARCH_WIN32 2        // Windows
#define MG_ARCH_ESP32 3        // ESP32
#define MG_ARCH_ESP8266 4      // ESP8266
#define MG_ARCH_FREERTOS 5     // FreeRTOS
#define MG_ARCH_AZURERTOS 6    // MS Azure RTOS
#define MG_ARCH_ZEPHYR 7       // Zephyr RTOS
#define MG_ARCH_NEWLIB 8       // Bare metal ARM
#define MG_ARCH_CMSIS_RTOS1 9  // CMSIS-RTOS API v1 (Keil RTX)
#define MG_ARCH_TIRTOS 10      // Texas Semi TI-RTOS
#define MG_ARCH_ARMCC 12       // Keil MDK-Core with Configuration Wizard
#define MG_ARCH_CMSIS_RTOS2 13 // CMSIS-RTOS API v2 (Keil RTX5, FreeRTOS)
#define MG_ARCH_RTTHREAD 14    // RT-Thread RTOS
#define MG_ARCH MG_ARCH_UNIX
#define MG_ARCH MG_ARCH_WIN32
#define MG_ARCH MG_ARCH_ESP8266
#define MG_ARCH MG_ARCH_ZEPHYR
#define MG_ARCH MG_ARCH_ESP32
#define MG_ARCH MG_ARCH_FREERTOS
#define MG_ENABLE_FREERTOS_TCP 1
#define MG_ARCH MG_ARCH_AZURERTOS
#define MG_ARCH MG_ARCH_RP2040
#define MG_ARCH MG_ARCH_ARMCC
#define MG_ARCH MG_ARCH_RTTHREAD
#define MG_IO_SIZE 512
#define free(a) vPortFree(a)
#define MG_ENABLE_SOCKET 0
#define MG_ENABLE_DIRLIST 0
#define MG_IO_SIZE 1460
#define MG_ENABLE_RL 1
#define MG_ENABLE_EPOLL 1
#define MG_ENABLE_POLL 1
#define MG_ENABLE_DIRLIST 1
typedef unsigned __int64 uint64_t;
typedef enum { false = 0, true = 1 } bool;
typedef unsigned long nfds_t;
#define MG_ENABLE_DIRLIST 1
#define SIGPIPE 0
#define MG_ENABLE_SSI 0
#define MG_ENABLE_LOG 1
#define MG_ENABLE_TCPIP 0  // Mongoose built-in network stack
#define MG_ENABLE_LWIP 0  // lWIP network stack
#define MG_ENABLE_FREERTOS_TCP 0  // Amazon FreeRTOS-TCP network stack
#define MG_ENABLE_RL 0  // ARM MDK network stack
#define MG_ENABLE_SOCKET !MG_ENABLE_TCPIP
#define MG_ENABLE_POLL 0
#define MG_ENABLE_EPOLL 0
#define MG_ENABLE_FATFS 0
#define MG_ENABLE_SSI 0
#define MG_ENABLE_IPV6 0
#define MG_ENABLE_MD5 1
#define MG_ENABLE_WINSOCK 1
#define MG_ENABLE_DIRLIST 0
#define MG_ENABLE_CUSTOM_RANDOM 0
#define MG_ENABLE_CUSTOM_MILLIS 0
#define MG_ENABLE_PACKED_FS 0
#define MG_ENABLE_ASSERT 0
#define MG_IO_SIZE 2048  // Granularity of the send/recv IO buffer growth
#define MG_MAX_RECV_SIZE (3 * 1024 * 1024)  // Maximum recv IO buffer size
#define MG_DATA_SIZE 32  // struct mg_connection :: data size
#define MG_MAX_HTTP_HEADERS 30
#define MG_HTTP_INDEX "index.html"
#define MG_SOCK_LISTEN_BACKLOG_SIZE 3
struct mg_str {
  const char *ptr;  // Pointer to string data
  size_t len;       // String len
};
// Using macro to avoid shadowing C++ struct constructor, see #1298
#define mg_str(s) mg_str_s(s)
EXPORT struct mg_str mg_str(const char *s);
EXPORT struct mg_str mg_str_n(const char *s, size_t n);
EXPORT int mg_casecmp(const char *s1, const char *s2);
EXPORT int mg_strcmp(const struct mg_str str1, const struct mg_str str2);
EXPORT struct mg_str mg_strdup(const struct mg_str s);
EXPORT bool mg_match(struct mg_str str, struct mg_str pattern, struct mg_str *caps);
// Single producer, single consumer non-blocking queue

struct mg_queue {
  char *buf;
  size_t size;
  volatile size_t tail;
  volatile size_t head;
};
EXPORT void mg_queue_init(struct mg_queue *, char *, size_t);        // Init queue
EXPORT size_t mg_queue_book(struct mg_queue *, char **buf, size_t);  // Reserve space
EXPORT void mg_queue_add(struct mg_queue *, size_t);                 // Add new message
EXPORT size_t mg_queue_next(struct mg_queue *, char **);  // Get oldest message
EXPORT void mg_queue_del(struct mg_queue *, size_t);      // Delete oldest message
typedef void (*mg_pfn_t)(char, void *);                  // Output function
typedef size_t (*mg_pm_t)(mg_pfn_t, void *, va_list *);  // %M printer
EXPORT size_t mg_vxprintf(void (*)(char, void *), void *, const char *fmt, va_list *);
EXPORT size_t mg_xprintf(void (*fn)(char, void *), void *, const char *fmt, ...);
// Convenience wrappers around mg_xprintf
EXPORT size_t mg_vsnprintf(char *buf, size_t len, const char *fmt, va_list *ap);
EXPORT size_t mg_snprintf(char *, size_t, const char *fmt, ...);
EXPORT char *mg_vmprintf(const char *fmt, va_list *ap);
EXPORT char *mg_mprintf(const char *fmt, ...);
EXPORT size_t mg_queue_vprintf(struct mg_queue *, const char *fmt, va_list *);
EXPORT size_t mg_queue_printf(struct mg_queue *, const char *fmt, ...);
// %M print helper functions
EXPORT size_t mg_print_base64(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_esc(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_hex(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip_port(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip4(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip6(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_mac(void (*out)(char, void *), void *arg, va_list *ap);
// Various output functions
EXPORT void mg_pfn_iobuf(char ch, void *param);  // param: struct mg_iobuf *
EXPORT void mg_pfn_stdout(char c, void *param);  // param: ignored
enum { MG_LL_NONE, MG_LL_ERROR, MG_LL_INFO, MG_LL_DEBUG, MG_LL_VERBOSE };
EXPORT void mg_log(const char *fmt, ...);
EXPORT bool mg_log_prefix(int ll, const char *file, int line, const char *fname);
EXPORT void mg_hexdump(const void *buf, size_t len);
EXPORT void mg_log_set_fn(mg_pfn_t fn, void *param);
struct mg_timer {
  unsigned long id;         // Timer ID
  uint64_t period_ms;       // Timer period in milliseconds
  uint64_t expire;          // Expiration timestamp in milliseconds
  unsigned flags;           // Possible flags values below
#define MG_TIMER_ONCE 0     // Call function once
#define MG_TIMER_REPEAT 1   // Call function periodically
#define MG_TIMER_RUN_NOW 2  // Call immediately when timer is set
  void (*fn)(void *);       // Function to call
  void *arg;                // Function argument
  struct mg_timer *next;    // Linkage
};
EXPORT void mg_timer_init(struct mg_timer **head, struct mg_timer *timer,
                   uint64_t milliseconds, unsigned flags, void (*fn)(void *),
                   void *arg);
struct mg_mgr {
  struct mg_connection *conns;  // List of active connections
  struct mg_dns dns4;           // DNS for IPv4
  struct mg_dns dns6;           // DNS for IPv6
  int dnstimeout;               // DNS resolve timeout in milliseconds
  bool use_dns6;                // Use DNS6 server by default, see #1532
  unsigned long nextid;         // Next connection ID
  unsigned long timerid;        // Next timer ID
  void *userdata;               // Arbitrary user data pointer
  void *tls_ctx;                // TLS context shared by all TLS sessions
  uint16_t mqtt_id;             // MQTT IDs for pub/sub
  void *active_dns_requests;    // DNS requests in progress
  struct mg_timer *timers;      // Active timers
  int epoll_fd;                 // Used when MG_EPOLL_ENABLE=1
  void *priv;                   // Used by the MIP stack
  size_t extraconnsize;         // Used by the MIP stack
#if MG_ENABLE_FREERTOS_TCP
  SocketSet_t ss;  // NOTE(lsm): referenced from socket struct
#endif
};
// Utility functions
EXPORT struct mg_timer *mg_timer_add(struct mg_mgr *mgr, uint64_t milliseconds,
                              unsigned flags, void (*fn)(void *), void *arg);
#define WEBSOCKET_OP_CONTINUE 0
#define WEBSOCKET_OP_TEXT 1
#define WEBSOCKET_OP_BINARY 2
#define WEBSOCKET_OP_CLOSE 8
#define WEBSOCKET_OP_PING 9
#define WEBSOCKET_OP_PONG 10
#define MQTT_CMD_CONNECT 1
#define MQTT_CMD_CONNACK 2
#define MQTT_CMD_PUBLISH 3
#define MQTT_CMD_PUBACK 4
#define MQTT_CMD_PUBREC 5
#define MQTT_CMD_PUBREL 6
#define MQTT_CMD_PUBCOMP 7
#define MQTT_CMD_SUBSCRIBE 8
#define MQTT_CMD_SUBACK 9
#define MQTT_CMD_UNSUBSCRIBE 10
#define MQTT_CMD_UNSUBACK 11
#define MQTT_CMD_PINGREQ 12
#define MQTT_CMD_PINGRESP 13
#define MQTT_CMD_DISCONNECT 14
#define MQTT_CMD_AUTH 15
#define MQTT_PROP_PAYLOAD_FORMAT_INDICATOR 0x01
#define MQTT_PROP_MESSAGE_EXPIRY_INTERVAL 0x02
#define MQTT_PROP_CONTENT_TYPE 0x03
#define MQTT_PROP_RESPONSE_TOPIC 0x08
#define MQTT_PROP_CORRELATION_DATA 0x09
#define MQTT_PROP_SUBSCRIPTION_IDENTIFIER 0x0B
#define MQTT_PROP_SESSION_EXPIRY_INTERVAL 0x11
#define MQTT_PROP_ASSIGNED_CLIENT_IDENTIFIER 0x12
#define MQTT_PROP_SERVER_KEEP_ALIVE 0x13
#define MQTT_PROP_AUTHENTICATION_METHOD 0x15
#define MQTT_PROP_AUTHENTICATION_DATA 0x16
#define MQTT_PROP_REQUEST_PROBLEM_INFORMATION 0x17
#define MQTT_PROP_WILL_DELAY_INTERVAL 0x18
#define MQTT_PROP_REQUEST_RESPONSE_INFORMATION 0x19
#define MQTT_PROP_RESPONSE_INFORMATION 0x1A
#define MQTT_PROP_SERVER_REFERENCE 0x1C
#define MQTT_PROP_REASON_STRING 0x1F
#define MQTT_PROP_RECEIVE_MAXIMUM 0x21
#define MQTT_PROP_TOPIC_ALIAS_MAXIMUM 0x22
#define MQTT_PROP_TOPIC_ALIAS 0x23
#define MQTT_PROP_MAXIMUM_QOS 0x24
#define MQTT_PROP_RETAIN_AVAILABLE 0x25
#define MQTT_PROP_USER_PROPERTY 0x26
#define MQTT_PROP_MAXIMUM_PACKET_SIZE 0x27
#define MQTT_PROP_WILDCARD_SUBSCRIPTION_AVAILABLE 0x28
#define MQTT_PROP_SUBSCRIPTION_IDENTIFIER_AVAILABLE 0x29
#define MQTT_PROP_SHARED_SUBSCRIPTION_AVAILABLE 0x2A
#define MG_JSON_MAX_DEPTH 30
// JSON-RPC request descriptor
struct mg_rpc_req {
  struct mg_rpc **head;  // RPC handlers list head
  struct mg_rpc *rpc;    // RPC handler being called
  mg_pfn_t pfn;          // Response printing function
  void *pfn_data;        // Response printing function data
  void *req_data;        // Arbitrary request data
  struct mg_str frame;   // Request, e.g. {"id":1,"method":"add","params":[1,2]}
};
// JSON-RPC method handler
struct mg_rpc {
  struct mg_rpc *next;              // Next in list
  struct mg_str method;             // Method pattern
  void (*fn)(struct mg_rpc_req *);  // Handler function
  void *fn_data;                    // Handler function argument
};
EXPORT void mg_rpc_add(struct mg_rpc **head, struct mg_str method_pattern,
                void (*handler)(struct mg_rpc_req *), void *handler_data);
EXPORT void mg_rpc_del(struct mg_rpc **head, void (*handler)(struct mg_rpc_req *));