module_windows.jai

//
// This file was auto-generated using the following command:
//
// jai ./generate.jai
//



MG_VERSION :: "7.16";

MG_ARCH_CUSTOM :: 0;
MG_ARCH_UNIX :: 1;
MG_ARCH_WIN32 :: 2;
MG_ARCH_ESP32 :: 3;
MG_ARCH_ESP8266 :: 4;
MG_ARCH_FREERTOS :: 5;
MG_ARCH_AZURERTOS :: 6;
MG_ARCH_ZEPHYR :: 7;
MG_ARCH_NEWLIB :: 8;
MG_ARCH_CMSIS_RTOS1 :: 9;
MG_ARCH_TIRTOS :: 10;
MG_ARCH_PICOSDK :: 11;
MG_ARCH_ARMCC :: 12;
MG_ARCH_CMSIS_RTOS2 :: 13;
MG_ARCH_RTTHREAD :: 14;
MG_ARCH_ARMCGT :: 15;

MG_ARCH :: MG_ARCH_WIN32;

MG_ENABLE_DIRLIST :: 1;

SIGPIPE :: 0;

MG_ENABLE_POSIX_FS :: 1;

MG_IO_SIZE :: 16384;

MG_ENABLE_LOG :: 1;

MG_ENABLE_CUSTOM_LOG :: 0;

MG_ENABLE_TCPIP :: 0;

MG_ENABLE_LWIP :: 0;

MG_ENABLE_FREERTOS_TCP :: 0;

MG_ENABLE_RL :: 0;

MG_ENABLE_SOCKET :: !MG_ENABLE_TCPIP;

MG_ENABLE_POLL :: 0;

MG_ENABLE_EPOLL :: 0;

MG_ENABLE_FATFS :: 0;

MG_ENABLE_SSI :: 0;

MG_ENABLE_IPV6 :: 0;

MG_IPV6_V6ONLY :: 0;

MG_ENABLE_MD5 :: 1;

MG_ENABLE_WINSOCK :: 1;

MG_ENABLE_CUSTOM_RANDOM :: 0;

MG_ENABLE_CUSTOM_MILLIS :: 0;

MG_ENABLE_PACKED_FS :: 0;

MG_ENABLE_ASSERT :: 0;

MG_MAX_RECV_SIZE :: 3 * 1024 * 1024;

MG_DATA_SIZE :: 32;

MG_MAX_HTTP_HEADERS :: 30;

MG_HTTP_INDEX :: "index.html";

MG_SOCK_LISTEN_BACKLOG_SIZE :: 128;

MG_ENABLE_PROFILE :: 0;

MG_ENABLE_TCPIP_DRIVER_INIT :: 1;

MG_ENABLE_TCPIP_PRINT_DEBUG_STATS :: 0;

MG_TIMER_ONCE :: 0;
MG_TIMER_REPEAT :: 1;
MG_TIMER_RUN_NOW :: 2;

X25519_BYTES :: 32;

GCM_AUTH_FAILURE :: 0x55555555;

MG_UECC_SUPPORTS_secp256r1 :: 1;

mg_uecc_arch_other :: 0;
mg_uecc_x86 :: 1;
mg_uecc_x86_64 :: 2;
mg_uecc_arm :: 3;
mg_uecc_arm_thumb :: 4;
mg_uecc_arm_thumb2 :: 5;
mg_uecc_arm64 :: 6;
mg_uecc_avr :: 7;

MG_UECC_OPTIMIZATION_LEVEL :: 2;

MG_UECC_SQUARE_FUNC :: 0;

MG_UECC_VLI_NATIVE_LITTLE_ENDIAN :: 0;

MG_UECC_SUPPORTS_secp160r1 :: 0;

MG_UECC_SUPPORTS_secp192r1 :: 0;

MG_UECC_SUPPORTS_secp224r1 :: 0;

MG_UECC_SUPPORTS_secp256k1 :: 0;

MG_UECC_SUPPORT_COMPRESSED_POINT :: 1;

MG_UECC_PLATFORM :: mg_uecc_x86_64;

MG_UECC_ARM_USE_UMAAL :: 0;

MG_UECC_WORD_SIZE :: 8;

HIGH_BIT_SET :: 0x8000000000000000;
MG_UECC_WORD_BITS :: 64;
MG_UECC_WORD_BITS_SHIFT :: 6;
MG_UECC_WORD_BITS_MASK :: 0x03F;

MG_UECC_ENABLE_VLI_API :: 0;

RFC_8439_TAG_SIZE :: 16;
RFC_8439_KEY_SIZE :: 32;
RFC_8439_NONCE_SIZE :: 12;

MG_TLS_NONE :: 0;
MG_TLS_MBED :: 1;
MG_TLS_OPENSSL :: 2;
MG_TLS_WOLFSSL :: 5;
MG_TLS_BUILTIN :: 3;
MG_TLS_CUSTOM :: 4;

MG_TLS :: MG_TLS_NONE;

WEBSOCKET_OP_CONTINUE :: 0;
WEBSOCKET_OP_TEXT :: 1;
WEBSOCKET_OP_BINARY :: 2;
WEBSOCKET_OP_CLOSE :: 8;
WEBSOCKET_OP_PING :: 9;
WEBSOCKET_OP_PONG :: 10;

MQTT_CMD_CONNECT :: 1;
MQTT_CMD_CONNACK :: 2;
MQTT_CMD_PUBLISH :: 3;
MQTT_CMD_PUBACK :: 4;
MQTT_CMD_PUBREC :: 5;
MQTT_CMD_PUBREL :: 6;
MQTT_CMD_PUBCOMP :: 7;
MQTT_CMD_SUBSCRIBE :: 8;
MQTT_CMD_SUBACK :: 9;
MQTT_CMD_UNSUBSCRIBE :: 10;
MQTT_CMD_UNSUBACK :: 11;
MQTT_CMD_PINGREQ :: 12;
MQTT_CMD_PINGRESP :: 13;
MQTT_CMD_DISCONNECT :: 14;
MQTT_CMD_AUTH :: 15;

MQTT_PROP_PAYLOAD_FORMAT_INDICATOR :: 0x01;
MQTT_PROP_MESSAGE_EXPIRY_INTERVAL :: 0x02;
MQTT_PROP_CONTENT_TYPE :: 0x03;
MQTT_PROP_RESPONSE_TOPIC :: 0x08;
MQTT_PROP_CORRELATION_DATA :: 0x09;
MQTT_PROP_SUBSCRIPTION_IDENTIFIER :: 0x0B;
MQTT_PROP_SESSION_EXPIRY_INTERVAL :: 0x11;
MQTT_PROP_ASSIGNED_CLIENT_IDENTIFIER :: 0x12;
MQTT_PROP_SERVER_KEEP_ALIVE :: 0x13;
MQTT_PROP_AUTHENTICATION_METHOD :: 0x15;
MQTT_PROP_AUTHENTICATION_DATA :: 0x16;
MQTT_PROP_REQUEST_PROBLEM_INFORMATION :: 0x17;
MQTT_PROP_WILL_DELAY_INTERVAL :: 0x18;
MQTT_PROP_REQUEST_RESPONSE_INFORMATION :: 0x19;
MQTT_PROP_RESPONSE_INFORMATION :: 0x1A;
MQTT_PROP_SERVER_REFERENCE :: 0x1C;
MQTT_PROP_REASON_STRING :: 0x1F;
MQTT_PROP_RECEIVE_MAXIMUM :: 0x21;
MQTT_PROP_TOPIC_ALIAS_MAXIMUM :: 0x22;
MQTT_PROP_TOPIC_ALIAS :: 0x23;
MQTT_PROP_MAXIMUM_QOS :: 0x24;
MQTT_PROP_RETAIN_AVAILABLE :: 0x25;
MQTT_PROP_USER_PROPERTY :: 0x26;
MQTT_PROP_MAXIMUM_PACKET_SIZE :: 0x27;
MQTT_PROP_WILDCARD_SUBSCRIPTION_AVAILABLE :: 0x28;
MQTT_PROP_SUBSCRIPTION_IDENTIFIER_AVAILABLE :: 0x29;
MQTT_PROP_SHARED_SUBSCRIPTION_AVAILABLE :: 0x2A;

MG_JSON_MAX_DEPTH :: 30;

MG_OTA_NONE :: 0;
MG_OTA_STM32H5 :: 1;
MG_OTA_STM32H7 :: 2;
MG_OTA_STM32H7_DUAL_CORE :: 3;
MG_OTA_STM32F :: 4;
MG_OTA_CH32V307 :: 100;
MG_OTA_U2A :: 200;
MG_OTA_RT1020 :: 300;
MG_OTA_RT1060 :: 301;
MG_OTA_RT1064 :: 302;
MG_OTA_RT1170 :: 303;
MG_OTA_MCXN :: 310;
MG_OTA_FLASH :: 900;
MG_OTA_ESP32 :: 910;
MG_OTA_PICOSDK :: 920;
MG_OTA_CUSTOM :: 1000;

MG_OTA :: MG_OTA_NONE;

MQTT_CLEAN_SESSION :: 0x02;
MQTT_HAS_WILL :: 0x04;
MQTT_WILL_RETAIN :: 0x20;
MQTT_HAS_PASSWORD :: 0x40;
MQTT_HAS_USER_NAME :: 0x80;

SNTP_TIME_OFFSET :: 2208988800;
SNTP_MAX_FRAC :: 4294967295.0;

MSG_NONBLOCKING :: 0;

MG_MAX_SSI_DEPTH :: 5;

MG_SSI_BUFSIZ :: 1024;

MG_TIMER_CALLED :: 4;

AES_DECRYPTION :: 1;

MG_ENCRYPT :: 1;
MG_DECRYPT :: 0;

X25519_WBITS :: 32;

NLIMBS :: 256 / X25519_WBITS;

nfds_t :: u32;

// Describes an arbitrary chunk of memory
mg_str :: struct {
    buf: *u8; // String data
    len: u64; // String length
}

mg_str_s :: (s: *u8) -> mg_str #foreign mongoose;

mg_str_n :: (s: *u8, n: u64) -> mg_str #foreign mongoose;

mg_casecmp :: (s1: *u8, s2: *u8) -> s32 #foreign mongoose;

mg_strcmp :: (str1: mg_str, str2: mg_str) -> s32 #foreign mongoose;

mg_strcasecmp :: (str1: mg_str, str2: mg_str) -> s32 #foreign mongoose;

mg_strdup :: (s: mg_str) -> mg_str #foreign mongoose;

mg_match :: (str: mg_str, pattern: mg_str, caps: *mg_str) -> bool #foreign mongoose;

mg_span :: (s: mg_str, a: *mg_str, b: *mg_str, delim: u8) -> bool #foreign mongoose;

mg_str_to_num :: (unknown0: mg_str, base: s32, val: *void, val_len: u64) -> bool #foreign mongoose;

// Single producer, single consumer non-blocking queue
mg_queue :: struct {
    buf:  *u8;
    size: u64;
    tail: u64;
    head: u64;
}

// Every message in a queue is prepended by a 32-bit message length (ML).
// If ML is 0, then it is the end, and reader must wrap to the beginning.
//
//  Queue when q->tail <= q->head:
//  |----- free -----| ML | message1 | ML | message2 |  ----- free ------|
//  ^                ^                               ^                   ^
// buf              tail                            head                len
//
//  Queue when q->tail > q->head:
//  | ML | message2 |----- free ------| ML | message1 | 0 |---- free ----|
//  ^               ^                 ^                                  ^
// buf             head              tail                               len
mg_queue_init :: (unknown0: *mg_queue, unknown1: *u8, unknown2: u64) -> void #foreign mongoose;

mg_queue_book :: (unknown0: *mg_queue, buf: **u8, unknown1: u64) -> u64 #foreign mongoose;

mg_queue_add :: (unknown0: *mg_queue, unknown1: u64) -> void #foreign mongoose;

mg_queue_next :: (unknown0: *mg_queue, unknown1: **u8) -> u64 #foreign mongoose;

mg_queue_del :: (unknown0: *mg_queue, unknown1: u64) -> void #foreign mongoose;

mg_pfn_t :: #type (unknown0: u8, unknown1: *void) -> void #c_call;
mg_pm_t :: #type (unknown0: mg_pfn_t, unknown1: *void, unknown2: *va_list) -> u64 #c_call;

mg_vxprintf :: (unknown0: #type (unknown0: u8, unknown1: *void) -> void #c_call, unknown1: *void, fmt: *u8, unknown2: *va_list) -> u64 #foreign mongoose;

mg_xprintf_CFormat :: (fn: #type (unknown0: u8, unknown1: *void) -> void #c_call, unknown0: *void, fmt: *u8, __args: ..Any) -> u64 #foreign mongoose "mg_xprintf";
mg_xprintf :: (fn: #type (unknown0: u8, unknown1: *void) -> void #c_call, unknown0: *void, fmt: string, __args: ..Any) -> u64 {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_xprintf_CFormat(fn, unknown0, "%s", formatted_text.data);
} @PrintLike

// Convenience wrappers around mg_xprintf
mg_vsnprintf :: (buf: *u8, len: u64, fmt: *u8, ap: *va_list) -> u64 #foreign mongoose;

mg_snprintf_CFormat :: (unknown0: *u8, unknown1: u64, fmt: *u8, __args: ..Any) -> u64 #foreign mongoose "mg_snprintf";
mg_snprintf :: (unknown0: *u8, unknown1: u64, fmt: string, __args: ..Any) -> u64 {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_snprintf_CFormat(unknown0, unknown1, "%s", formatted_text.data);
} @PrintLike

mg_vmprintf :: (fmt: *u8, ap: *va_list) -> *u8 #foreign mongoose;

mg_mprintf_CFormat :: (fmt: *u8, __args: ..Any) -> *u8 #foreign mongoose "mg_mprintf";
mg_mprintf :: (fmt: string, __args: ..Any) -> *u8 {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_mprintf_CFormat("%s", formatted_text.data);
} @PrintLike

mg_queue_vprintf :: (unknown0: *mg_queue, fmt: *u8, unknown1: *va_list) -> u64 #foreign mongoose;

mg_queue_printf_CFormat :: (unknown0: *mg_queue, fmt: *u8, __args: ..Any) -> u64 #foreign mongoose "mg_queue_printf";
mg_queue_printf :: (unknown0: *mg_queue, fmt: string, __args: ..Any) -> u64 {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_queue_printf_CFormat(unknown0, "%s", formatted_text.data);
} @PrintLike

// %M print helper functions
mg_print_base64 :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_esc :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_hex :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_ip :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_ip_port :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_ip4 :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_ip6 :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

mg_print_mac :: (out: #type (unknown0: u8, unknown1: *void) -> void #c_call, arg: *void, ap: *va_list) -> u64 #foreign mongoose;

// Various output functions
mg_pfn_iobuf :: (ch: u8, param: *void) -> void #foreign mongoose;

mg_pfn_stdout :: (c: u8, param: *void) -> void #foreign mongoose;

MG_LL :: enum s32 {
    NONE    :: 0;
    ERROR   :: 1;
    INFO    :: 2;
    DEBUG   :: 3;
    VERBOSE :: 4;
    MG_LL_NONE    :: NONE;
    MG_LL_ERROR   :: ERROR;
    MG_LL_INFO    :: INFO;
    MG_LL_DEBUG   :: DEBUG;
    MG_LL_VERBOSE :: VERBOSE;
}

mg_log_CFormat :: (fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_log";
mg_log :: (fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_log_CFormat("%s", formatted_text.data);
} @PrintLike

mg_log_prefix :: (ll: s32, file: *u8, line: s32, fname: *u8) -> void #foreign mongoose;

// bool mg_log2(int ll, const char *file, int line, const char *fmt, ...);
mg_hexdump :: (buf: *void, len: u64) -> void #foreign mongoose;

mg_log_set_fn :: (fn: mg_pfn_t, param: *void) -> void #foreign mongoose;

mg_timer :: struct {
    id:        u32; // Timer ID
    period_ms: u64; // Timer period in milliseconds
    expire:    u64; // Expiration timestamp in milliseconds
    flags:     u32; // Possible flags values below
